# tbitsearch

./: Cargo.toml  README.md  build-all-targets.sh
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
