[package]
name = "tbitsearch"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soup = "0.5.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
text_io = "0.1.12"
markup5ever = "0.7.5"
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"